css/style.css
/* Adding fonts - Raleway Normal, Bold, Light */

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-Bold.eot');
    src: local('Raleway Bold'), local('Raleway-Bold'),
    url('../fonts/Raleway-Bold.eot?#iefix') format('embedded-opentype'),
    url('../fonts/Raleway-Bold.woff2') format('woff2'),
    url('../fonts/Raleway-Bold.woff') format('woff'),
    url('../fonts/Raleway-Bold.ttf') format('truetype'),
    url('../fonts/Raleway-Bold.svg#Raleway-Bold') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-Light.eot');
    src: local('Raleway Light'), local('Raleway-Light'),
    url('../fonts/Raleway-Light.eot?#iefix') format('embedded-opentype'),
    url('../fonts/Raleway-Light.woff2') format('woff2'),
    url('../fonts/Raleway-Light.woff') format('woff'),
    url('../fonts/Raleway-Light.ttf') format('truetype'),
    url('../fonts/Raleway-Light.svg#Raleway-Light') format('svg');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-Regular.eot');
    src: local('Raleway'), local('Raleway-Regular'),
    url('../fonts/Raleway-Regular.eot?#iefix') format('embedded-opentype'),
    url('../fonts/Raleway-Regular.woff2') format('woff2'),
    url('../fonts/Raleway-Regular.woff') format('woff'),
    url('../fonts/Raleway-Regular.ttf') format('truetype'),
    url('../fonts/Raleway-Regular.svg#Raleway-Regular') format('svg');
    font-weight: normal;
    font-style: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Raleway', sans-serif;
    font-weight: 300;
}

.main-width {
    width: 100%;
}

.container {
    width: 1065px; /*adjusted to match original design, which was created for screen of width 1200px*/
    margin: 0 auto;
    height: 100%;
    clear:both;
}

div.container::after {
    content: "";
    clear: both;
    display: block;
}

/*header*/
header {
    background-color: black;
    height: 40px;
}

header p {
    padding-top: 10px;
    font-size: 12px;
    letter-spacing: 2px;
    float: left;
}

header nav {
    float: right;
    padding-top: 10px;
}

header nav li{
    padding-left: 52px;
    list-style: none;
    display: inline-block;
    float: left;
}

.dropdown {
    position: relative;
    float: left;
    z-index: 1;
}

.dropdown-content {
    position: absolute;
    display: none;
    width: 120px;
    height: 96px;
    top: 50px;
    background-color: black;
    font-size: 16px;
    left: 20px;
}

.dropdown-content li {
    display: block;
    list-style: none;
    padding-left: 0;
}

.dropdown-content a {
    line-height: 30px;
    padding-left: 12px;
    text-decoration: none;
}

.dropdown-arrow {
    width: 0;
    height: 0;
    border-left: 20px solid transparent;
    border-right: 20px solid transparent;
    border-bottom: 20px solid black;
    position: absolute;
    top: 38px;
    left: 58px;
    display: none;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown:hover .dropdown-arrow {
    display: block;
}

/*main focus area*/
section.gradient {
    padding-top: 100px;
    height: 500px;
    background: rgba(252,252,252,1);
    background: -moz-linear-gradient(top, rgba(252,252,252,1) 0%, rgba(209,209,209,1) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(252,252,252,1)), color-stop(100%, rgba(209,209,209,1)));
    background: -webkit-linear-gradient(top, rgba(252,252,252,1) 0%, rgba(209,209,209,1) 100%);
    background: -o-linear-gradient(top, rgba(252,252,252,1) 0%, rgba(209,209,209,1) 100%);
    background: -ms-linear-gradient(top, rgba(252,252,252,1) 0%, rgba(209,209,209,1) 100%);
    background: linear-gradient(to bottom, rgba(252,252,252,1) 0%, rgba(209,209,209,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#d1d1d1', GradientType=0 );
}

section.gradient .container {
    top: -50px;
    position: relative;
}

.arrow {
    display: inline-block;
    font-size: 80px;
    font-weight: 300;
    margin-top: 160px;
}

.left {
    float: left;
    text-align: left;
    margin-left: 3px;
}

.right {
    float: right;
    text-align: right;
    margin-right: 13px;
}

div.black-chair {
    height: 420px;
    width: 430px;
    background-image: url(../images/black_chair.png);
    background-position: center;
    background-size: cover;
    float: left;
    position: absolute;
    margin-left: 43px;
    margin-top: 22px;
}

.next-to-chair {
    position: absolute;
    height: 350px;
    width: 421px;
    float: left;
    padding-top: 37px;
    text-align: center;
    margin-left: 489px;
    margin-top: 50px;
    letter-spacing: 1px;
}

.next-to-chair p {
    margin-top: 28px;
    font-size: 14px;
    line-height: 22px;
}

.next-to-chair h1 {
    margin-bottom: 20px;
    font-size: 38px;
    font-weight: 300;
}

.next-to-chair input {
    color: white;
    width: 264px;
    height: 52px;
    margin-top: 29px;
    border-radius: 10px;
    font-size: 26px;
    margin-left: 8px;
    letter-spacing: 3px;
    font-weight: 300;
}

/*products*/
section.products {
    height: 350px;
}

.chair {
    height: 225px;
    width: 330px;
    float: left;
    margin-top: 33px;
    margin-right: 27px;
}

.chair:last-child {
    margin-right: 0;
}

.clair {
    background-image: url(../images/box1_img.jpg);
}

.margarita {
    background-image: url(../images/box2_img.jpg);
}

.monica {
    background-image: url(../images/box3_img.jpg);
    background-position: center;
    background-size: cover;
}

.chair--banner {
    background-color: rgba(255,255,255,0.5);
    width: 100%;
    height: 20%;

}

.chair--banner p {
    margin-top: 162px;
    margin-left: 15px;
}

.underline {
    height: 6px;
    width: 40%;
}

div.product-description {
    font-size: 14px;
    padding-right: 30px;
    margin-top: 16px;
    line-height: 19px;
    display: none;
}

/*product section hover*/
.chair:hover {
    background-color: white;
    background-image: none;
    height: 250px;
    width: 340px;
}

.chair:hover .underline {
    margin-left: 15px;
}

.chair:hover .chair--banner {
    margin-top: 26px;
    margin-left: 0;
}

.chair:hover .chair--banner p {
    margin-top: 26px;
    margin-left: 22px;
}

.chair:hover .chair--banner .underline {
    margin-left: 22px;
}

.chair:hover div.product-description {
    display: block;
}

/*pricing*/
section.pricing {
    height: 700px;
}

.section-header {
    height: 80px;
}

.section-header h2 {
    padding-top: 50px;
    font-size: 20px;
}

section.pricing .plan {
    float: left;
    width: 325px;
    position: relative;
    height: 500px;
    margin-top: 75px;
    margin-right: 30px;
}

.medium-circle {
    position: absolute;
    width: 57px;
    height: 57px;
    top: -28px;
    left: 135px;
    border-radius: 50%;
}

.small-circle {
    position: absolute;
    width: 28px;
    height: 28px;
    border-radius: 50%;
    top: 14px;
    left: 14px;
}

section.pricing h3 {
    width: 100%;
    text-align: center;
    top: 50px;
    font-size: 24px;
    margin: 30px auto;
}

.large-circle {
    width: 130px;
    height: 130px;
    margin: 30px auto;
    border-radius: 50%;
}

.large-circle div.price {
    width: 85%;
    height: 60px;
    text-align: center;
    margin: 0 auto;
    margin-top: 30px;
}

.large-price-text {
    font-size: 50px;
    vertical-align: top;
}

.small-price-text {
    font-size: 14px;
    vertical-align: top;
}

.large-circle p {
    font-size: 14px;
    width: 100%;
    text-align: center;
}

section.pricing table{
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    border-spacing: 0;
}

tr {
    height: 45px;
    font-size: 20px;
    border: none;

}

tr:nth-of-type(2n) {
    background-color: #F1F1F1;
}

tr:nth-of-type(2n+1) {
    background-color: #E4E4E4;
}

section.pricing input {
    position: absolute;
    left: 100px;
    bottom: 20px;
    width: 122px;
    height: 34px;
    border: none;
    border-radius: 5px;
    font-size: 14px;
}

/*Pricing section - on hover*/
section.pricing .plan:hover {
    background-color: #24B99E;
    border: 1px solid #24B99E;
}

section.pricing .plan:hover .medium-circle {
    background-color: #24B99E;
    border: 1px solid #24B99E;
}

section.pricing .plan:hover .small-circle {
    background-color: white;
}

section.pricing .plan:hover h3 {
    color: white;
}

section.pricing .plan:hover tr:nth-of-type(2n) {
    background-color: #E4E4E4;
}

section.pricing .plan:hover tr:nth-of-type(2n+1) {
    background-color: #F1F1F1;
}

section.pricing .plan:hover input {
    background-color: white;
    color: #24B99E;
}

/*contact*/
section.contact {
    height: 600px;
}

.form-left {
    float: left;
    width: 618px;
    padding-top: 45px;
}

.form-left input {
    border-radius: 0;
    width: 100%;
    height: 66px;
    margin-top: 26px;
    font-size: 24px;
}

.form-left input:first-of-type {
    margin-top: 0px;
}

textarea {
    margin-top: 30px;
    text-rendering: auto;
    color: initial;
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    display: inline-block;
    text-align: start;
    font-size: 26px;
}

.form-right {
    float: left;
    padding-left: 57px;
    width: 400px;
}

.red-chair {
    height: 238px;
    width: 300px;
    background-image: url(../images/red_chair.png);
    background-position: center;
    background-size: cover;
}

.agreement {
    width: 100%;
    margin-top: 30px;
}

.agreement .checkbox {
    height: 50px;
    width: 50px;
    background-image: url(../images/form_ok.jpg);
    background-position: center;
    background-size: contain;
    float: left;
}

.agreement p {
    float: left;
    width: 85%;
    padding-left: 20px;
    padding-top: 5px;
}

.form-right input {
    margin-top: 30px;
    width: 343px;
    height: 62px;
    border-radius: 15px;
    font-size: 24px;
}

::placeholder {
    font-size: 24px;
    font-family: Raleway;
    padding-top: 22px;
    padding-left: 10px;
    opacity: 0.4;
}

/*Footer*/
footer {
    height: 60px;
}

footer .form-left {
    padding-top: 0;
}

.icon div {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    background-position: center;
    background-size: cover;
    float: left;
}

.flickr {
    background-image: url(../images/flickr.png);
}

.vimeo {
    background-image: url(../images/vimeo.png);
}

.pinterest {
    background-image: url(../images/pinterest.png);
}

.twitter {
    background-image: url(../images/twitter.png);
}

.form-right .logo {
    float: right;
    padding-top: 10px;
}


/*Color and text style*/
.text-white {
    color: white;
}

.text-teal {
    color: #24B99E;
}

.text-black {
    color: black;
}

.background-teal {
    background-color: #24B99E;
}

.background-white {
    background-color: white;
}

.grey {
    background-color: #F1F1F1;
}

.dark-grey {
    background-color: #E4E4E4;
}

.text-darkest-grey {
    color: #C2C2C2;
}

.darkest-grey {
    background-color: #C2C2C2;
}

.light-grey {
    background-color: #F9F9F9;
}

.grey-text {
    color: #606060;
}

.uppercase {
    text-transform: uppercase;
}

.bold {
    font-weight: bold;
}

.light {
    font-weight: 300;
}

.capitalize {
    text-transform: capitalize;
}

.border-grey {
    border: 1px solid #DBDBDB;
}

.border-teal {
    border: 1px solid #24B99E;
}

